# hackathon2-phase1

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  requirements.txt  tasks.json  test_output.txt
.claude/: settings.local.json
.specify/memory/: constitution.md  constitution_updated.md
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/src/: database.py  main.py  package-lock.json
backend/src/api/: deps.py
backend/src/core/: config.py  errors.py  security.py
backend/src/models/: __init__.py  task.py
backend/src/services/: __init__.py  task_service.py
docs/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: TaskComponent.tsx
frontend/src/services/: api.ts
history/prompts/001-console-todo-app/: 1-create-console-todo-app-spec.spec.prompt.md  2-create-console-todo-app-plan.plan.prompt.md  3-create-console-todo-app-tasks.tasks.prompt.md  4-implement-console-todo-app.implementation.prompt.md
history/prompts/002-interactive-mode/: 1-create-interactive-mode-spec.spec.prompt.md  (+3 more)
specs-history/002-interactive-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_app/: __init__.py
src/todo_app/cli/: __init__.py  (+2 more)
tests/integration/: test_cli.py
tests/unit/: test_interactive_menu.py  test_task.py  test_task_service.py
(+23 files in other folders)
