[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "console-todo-app"
version = "0.1.0"
description = "A Python console-based todo application"
authors = [{name = "Developer", email = "developer@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0"
]

[project.scripts]
todo-app = "todo_app.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]